--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -54,7 +54,7 @@
                                 <p class="card-text">
                                     A Portfolio Website built using HTML, CSS and BootStrap.
                                 </p>
-                                <a href="" target="_blank"><i class="fab fa-github"></i></a>
+                                <a href="https://github.com/AbhilashMallik/Portfolio" target="_blank"><i class="fab fa-github"></i></a>
                             </div>
                         </div>
                     </div>
