--- a/Portfolio/projects.html
+++ b/Portfolio/projects.html
@@ -27,7 +27,7 @@
         <h2 id="portfolio">
             Portfolio
         </h2>
-        <a href="" target = "_blank"><i class="fab fa-github "></i></a>
+        <a href="https://github.com/AbhilashMallik/Portfolio" target = "_blank"><i class="fab fa-github "></i></a>
         <a href=" "><img src="./portfolio.jpg" class="img-fluid "></a>
         <h2 id="Technokart">
             TechnoKart
